working on vision page

--- a/suprise.html
+++ b/suprise.html
@@ -19,11 +19,11 @@ layout: default
   canvas {
     margin-top: 20px;
   }
-  gameContainer {
-  display: flex;
-  flex-direction: column; /* stack vertically */
-  align-items: center;    /* center horizontally */
-  margin-top: 20px;
+  #gameContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 20px;
   }
 </style>
 </head>
