--- a/suprise.html
+++ b/suprise.html
@@ -25,6 +25,11 @@ layout: default
     align-items: center;
     margin-top: 20px;
   }
+  #winMessage {
+  margin-top: 10px;
+  text-align: center; /* center the text */
+  font-size: 1.5em;  /* optional, adjust as needed */
+  }
 </style>
 </head>
 <body>
@@ -69,14 +74,14 @@ function drawMaze() {
   for(let y = 0; y < rows; y++){
     for(let x = 0; x < cols; x++){
       if(maze[y][x] === 1){
-        const icon = "🌲";
-        ctx.font = tileSize + "px Arial"; 
+        const icon = "\uf1bb";
+        ctx.font = tileSize + "px 'Font Awesome 6 Free'";
         ctx.textAlign = "center";
         ctx.textBaseline = "middle";
         ctx.fillText(icon, x*tileSize + tileSize/2, y*tileSize + tileSize/2);
       } else if(maze[y][x] === 2) {
-        const icon = "🪨";
-        ctx.font = tileSize + "px Arial"; 
+        const icon = "\uf3df";
+        ctx.font = tileSize + "px 'Font Awesome 6 Free'";
         ctx.textAlign = "center";
         ctx.textBaseline = "middle";
         ctx.fillText(icon, x*tileSize + tileSize/2, y*tileSize + tileSize/2);
