working on vision page

--- a/suprise.html
+++ b/suprise.html
@@ -74,14 +74,14 @@ function drawMaze() {
   for(let y = 0; y < rows; y++){
     for(let x = 0; x < cols; x++){
       if(maze[y][x] === 1){
-        const icon = "\uf1bb";
-        ctx.font = tileSize + "px 'Font Awesome 6 Free'";
+        const icon = "🌲";
+        ctx.font = tileSize + "px Arial"; 
         ctx.textAlign = "center";
         ctx.textBaseline = "middle";
         ctx.fillText(icon, x*tileSize + tileSize/2, y*tileSize + tileSize/2);
       } else if(maze[y][x] === 2) {
-        const icon = "\uf3df";
-        ctx.font = tileSize + "px 'Font Awesome 6 Free'";
+        const icon = "🪨";
+        ctx.font = tileSize + "px Arial"; 
         ctx.textAlign = "center";
         ctx.textBaseline = "middle";
         ctx.fillText(icon, x*tileSize + tileSize/2, y*tileSize + tileSize/2);
