working on vision page

--- a/suprise.html
+++ b/suprise.html
@@ -17,7 +17,7 @@ layout: default
     padding: 20px;
   }
   canvas {
-    margin-top: 20px;
+    margin-top: 40px;
   }
   #gameContainer {
     display: flex;
@@ -26,9 +26,20 @@ layout: default
     margin-top: 20px;
   }
   #winMessage {
-  margin-top: 10px;
-  text-align: center; /* center the text */
-  font-size: 1.5em;  /* optional, adjust as needed */
+    margin-top: 10px;
+    text-align: center; /* center the text */
+    font-size: 1.5em;  /* optional, adjust as needed */
+  }
+  #controls {
+    margin-top: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  #controls button {
+    font-size: 24px;
+    margin: 2px;
+    padding: 10px 15px;
   }
 </style>
 </head>
@@ -38,6 +49,12 @@ layout: default
   <h2>Reach the green square</h2>
   <canvas id="mazeCanvas" width="400" height="400"></canvas>
   <div id="winMessage"> </div>
+  <div id="controls">
+    <button onclick="movePlayer(0,-1)">↑</button><br>
+    <button onclick="movePlayer(-1,0)">←</button>
+    <button onclick="movePlayer(0,1)">↓</button>
+    <button onclick="movePlayer(1,0)">→</button>
+  </div>
 </div>
 
 <script>
