--- a/suprise.html
+++ b/suprise.html
@@ -47,7 +47,6 @@ layout: default
     font-size: 24px;
     padding: 15px 20px;
     margin: 2px;
-    border-radius: 5px;
     cursor: pointer;
   }
 </style>
@@ -59,7 +58,7 @@ layout: default
   <canvas id="mazeCanvas" width="400" height="400"></canvas>
   <div id="controls">
     <div class="row">
-      <button onclick="movePlayer(0,-1)"><i class="fas fa-arrow-up"></button>
+      <button onclick="movePlayer(0,-1)"><i class="fas fa-arrow-up"></i></button>
     </div>
     <div class="row">
       <button onclick="movePlayer(-1,0)"><i class="fas fa-arrow-left"></i></button>
