working on vision page

--- a/suprise.html
+++ b/suprise.html
@@ -58,12 +58,12 @@ layout: default
   <canvas id="mazeCanvas" width="400" height="400"></canvas>
   <div id="controls">
     <div class="row">
-      <button onclick="movePlayer(0,-1)"><i class="fas fa-arrow-up"></i></button>
+      <button onclick="movePlayer(0,-1)"><i class="fas fa-circle-up"></i></button>
     </div>
     <div class="row">
-      <button onclick="movePlayer(-1,0)"><i class="fas fa-arrow-left"></i></button>
-      <button onclick="movePlayer(0,1)"><i class="fas fa-arrow-down"></i></button>
-      <button onclick="movePlayer(1,0)"><i class="fas fa-arrow-right"></i></button>
+      <button onclick="movePlayer(-1,0)"><i class="fas fa-circle-left"></i></button>
+      <button onclick="movePlayer(0,1)"><i class="fas fa-circle-down"></i></button>
+      <button onclick="movePlayer(1,0)"><i class="fas fa-circle-right"></i></button>
     </div>
   </div>
   <div id="winMessage"> </div>
