working on vision page

--- a/suprise.html
+++ b/suprise.html
@@ -44,18 +44,20 @@ layout: default
   }
 
   #controls button {
-    font-size: 36px;      /* adjust icon size */
-    padding: 10px;         /* optional spacing around the icon */
+    font-size: 48px;      /* adjust icon size */
     margin: 5px;
     background: none;      /* remove background */
     border: none;          /* remove border */
     outline: none;         /* remove outline */
     cursor: pointer;       /* pointer on hover */
-    color: #333;           /* icon color */
+    color: #555;           /* icon color */
   }
 
   #controls button:active {
-    color: #555;           /* optional pressed effect */
+    color: #333;           /* optional pressed effect */
+  }
+  #controls button:active {
+    color: #333;           /* optional pressed effect */
   }
 </style>
 </head>
