working on vision page

--- a/suprise.html
+++ b/suprise.html
@@ -56,9 +56,10 @@ layout: default
   #controls button:active {
     color: #333;           /* optional pressed effect */
   }
-  #controls button:active {
+  #controls button:focus {
     color: #333;           /* optional pressed effect */
   }
+  
 </style>
 </head>
 <body>
