working on vision page

--- a/suprise.html
+++ b/suprise.html
@@ -57,9 +57,12 @@ layout: default
     color: #333;           /* optional pressed effect */
   }
   #controls button:focus {
-    color: #333;           /* optional pressed effect */
+    color: #444;           /* optional pressed effect */
   }
-  
+  #controls button:hover {
+    color: #444;           /* optional pressed effect */
+  }
+
 </style>
 </head>
 <body>
