working on vision page

--- a/suprise.html
+++ b/suprise.html
@@ -108,39 +108,60 @@ let player = { x: 1, y: 1 };
 // Goal
 const goal = { x: 8, y: 8 };
 
+// Preload sprite images
+const images = {};
+function loadImages(callback) {
+  const sources = {
+    tree: 'images/tree2.svg',
+    rock: 'images/rock.svg',
+    floor: 'images/floor.svg',
+    player: 'images/player.svg',
+    goal: 'images/goal.svg'
+  };
+
+  let loaded = 0;
+  const total = Object.keys(sources).length;
+
+  for (let key in sources) {
+    images[key] = new Image();
+    images[key].src = sources[key];
+    images[key].onload = () => {
+      loaded++;
+      if (loaded === total) callback();
+    };
+  }
+}
+
+// Assign wall sprites randomly
+const wallSprites = [];
+for (let y = 0; y < rows; y++) {
+  wallSprites[y] = [];
+  for (let x = 0; x < cols; x++) {
+    if (maze[y][x] === 1) {
+      wallSprites[y][x] = Math.random() < 0.5 ? 'tree' : 'rock';
+    } else {
+      wallSprites[y][x] = '';
+    }
+  }
+}
+
 function drawMaze() {
   ctx.clearRect(0, 0, canvas.width, canvas.height);
 
-  for(let y = 0; y < rows; y++){
-    for(let x = 0; x < cols; x++){
-      if(maze[y][x] === 1){
-        const icon = "🌲";
-        ctx.font = tileSize + "px Arial"; 
-        ctx.textAlign = "center";
-        ctx.textBaseline = "middle";
-        ctx.fillText(icon, x*tileSize + tileSize/2, y*tileSize + tileSize/2);
-      } else if(maze[y][x] === 2) {
-        const icon = "🪨";
-        ctx.font = tileSize + "px Arial"; 
-        ctx.textAlign = "center";
-        ctx.textBaseline = "middle";
-        ctx.fillText(icon, x*tileSize + tileSize/2, y*tileSize + tileSize/2);
-
-      } 
-      else {
-        ctx.fillStyle = "#222";
-        ctx.fillRect(x*tileSize, y*tileSize, tileSize, tileSize);
+  for (let y = 0; y < rows; y++) {
+    for (let x = 0; x < cols; x++) {
+      if (maze[y][x] === 1) {
+        ctx.drawImage(images[wallSprites[y][x]], x * tileSize, y * tileSize, tileSize, tileSize);
+      } else {
+        if (images.floor) ctx.drawImage(images.floor, x * tileSize, y * tileSize, tileSize, tileSize);
+        else ctx.clearRect(x * tileSize, y * tileSize, tileSize, tileSize);
       }
     }
   }
 
-  // Draw goal
-  ctx.fillStyle = 'green';
-  ctx.fillRect(goal.x*tileSize, goal.y*tileSize, tileSize, tileSize);
-
-  // Draw player
-  ctx.fillStyle = 'red';
-  ctx.fillRect(player.x*tileSize+5, player.y*tileSize+5, tileSize-10, tileSize-10);
+  // Draw goal & player
+  ctx.drawImage(images.goal, goal.x * tileSize, goal.y * tileSize, tileSize, tileSize);
+  ctx.drawImage(images.player, player.x * tileSize, player.y * tileSize, tileSize, tileSize);
 }
 
 function movePlayer(dx, dy){
