working on vision page

--- a/suprise.html
+++ b/suprise.html
@@ -65,7 +65,7 @@ layout: default
 <body>
 
 <div id="gameContainer">
-  <h2>Reach the green square</h2>
+  <h2>Reach the castle</h2>
   <canvas id="mazeCanvas" width="400" height="400"></canvas>
   <div id="controls">
     <div class="row">
