working on vision page

--- a/suprise.html
+++ b/suprise.html
@@ -65,7 +65,7 @@ layout: default
 <body>
 
 <div id="gameContainer">
-  <h2>Reach the castle</h2>
+  <div id="winMessage"> </div>
   <canvas id="mazeCanvas" width="400" height="400"></canvas>
   <div id="controls">
     <div class="row">
@@ -77,7 +77,6 @@ layout: default
       <button onclick="movePlayer(1,0)"><i class="fas fa-circle-right"></i></button>
     </div>
   </div>
-  <div id="winMessage"> </div>
 </div>
 
 <script>
@@ -176,9 +175,9 @@ function movePlayer(dx, dy) {
 function checkWin(){
   const messageDiv = document.getElementById('winMessage');
   if(player.x === goal.x && player.y === goal.y){
-    messageDiv.textContent = "You reached the goal!";
+    messageDiv.textContent = "You reached the castle!";
   } else {
-    messageDiv.textContent = ""; // clear message if player moves away
+    messageDiv.textContent = "Reach the castle"; // clear message if player moves away
   }
 }
 
@@ -199,7 +198,7 @@ document.addEventListener('keydown', e => {
 document.addEventListener('click', e => {
   // Ignore clicks on links or buttons
   if (e.target.closest('a, button')) return;
-  
+
   const rect = canvas.getBoundingClientRect();
   const clickX = e.clientX - rect.left;
   const clickY = e.clientY - rect.top;
