working on vision page

--- a/suprise.html
+++ b/suprise.html
@@ -28,7 +28,6 @@ layout: default
   #winMessage {
     margin-top: 10px;
     text-align: center; /* center the text */
-    font-size: 1.5em;  /* optional, adjust as needed */
   }
   #controls {
     margin-top: 15px;
@@ -65,7 +64,7 @@ layout: default
 <body>
 
 <div id="gameContainer">
-  <div id="winMessage"> </div>
+  <h2 id="winMessage">Reach the castle</h2>
   <canvas id="mazeCanvas" width="400" height="400"></canvas>
   <div id="controls">
     <div class="row">
